common/custom-admission-policy/allowed-host-paths.yaml
---
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: allowedhostpaths
  annotations:
    description: Enforces security policy to restrict containers to specific allowed host paths.
    metadata.gatekeeper.sh/title: Allowed Host Paths Security Policy Constraint
    metadata.gatekeeper.sh/version: 1.0.0
    argocd.argoproj.io/hook: PreSync
spec:
  crd:
    spec:
      names:
        kind: AllowedHostPaths
      validation:
        openAPIV3Schema:
          type: object
          properties:
            allowedHostPaths:
              description: A list of allowed host paths with path prefixes and read-only settings.
              type: array
              items:
                type: object
                properties:
                  pathPrefix:
                    type: string
                    description: The path prefix that the hostPath must start with.
                  readOnly:
                    type: boolean
                    description: Indicates if the host path must be mounted as read-only.
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package d8.allowed_host_paths

        # Проверка на использование запрещенного hostPath
        violation[{"msg": msg}] {
          volume := input.review.object.spec.volumes[_]
          has_host_path(volume)
          not host_path_is_allowed(volume.hostPath)
          msg := sprintf("Host path %v is not allowed. Allowed host paths are %v.", [volume.hostPath.path, input.parameters.allowedHostPaths])
        }

        # Проверка, что volume использует hostPath
        has_host_path(volume) {
          volume.hostPath
        }

        # Проверка, является ли hostPath разрешенным
        host_path_is_allowed(hostPath) {
          allowed := input.parameters.allowedHostPaths[_]
          startswith(hostPath.path, allowed.pathPrefix)
          hostPath.readOnly == allowed.readOnly
        }
