common/custom-admission-policy/deny-host-features.yaml
---
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: denyhostfeatures
  annotations:
    description: Enforces security policies to restrict usage of HostIPC, HostNetwork, and HostPID.
    metadata.gatekeeper.sh/title: Host Features Security Policy Constraint
    metadata.gatekeeper.sh/version: 1.0.0
    argocd.argoproj.io/hook: PreSync
spec:
  crd:
    spec:
      names:
        kind: DenyHostFeatures
      validation:
        openAPIV3Schema:
          type: object
          properties:
            allowHostIPC:
              type: boolean
              description: "Allow or deny usage of HostIPC."
            allowHostNetwork:
              type: boolean
              description: "Allow or deny usage of HostNetwork."
            allowHostPID:
              type: boolean
              description: "Allow or deny usage of HostPID."
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package d8.host_features

        # Проверка на использование HostIPC
        violation[{"msg": msg}] {
          input.review.object.spec.hostIPC
          not input.parameters.allowHostIPC
          msg := "Pod uses HostIPC, which is restricted by security policy."
        }

        # Проверка на использование HostNetwork
        violation[{"msg": msg}] {
          input.review.object.spec.hostNetwork
          not input.parameters.allowHostNetwork
          msg := "Pod uses HostNetwork, which is restricted by security policy."
        }

        # Проверка на использование HostPID
        violation[{"msg": msg}] {
          input.review.object.spec.hostPID
          not input.parameters.allowHostPID
          msg := "Pod uses HostPID, which is restricted by security policy."
        }
